Make sure a quiz is correctly restarted when several vocabularies are open.

BUG:138132

svn path=/branches/KDE/3.5/kdeedu/kwordquiz/; revision=609467